# voc

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  AndroidManifest.xml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.rst  ant.properties  beekeeper.yml  build-android.xml  build-java.xml  build.xml  checkstyle.xml  compile_stdlib.py  project.properties  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
docs/background/: community.rst  faq.rst  index.rst  install.rst  releases.rst  roadmap.rst
docs/how-to/: contribute-code.rst  contribute-docs.rst  contribute.rst  development-env.rst  index.rst  release_process.rst
docs/internals/: contributing.rst  index.rst  release_process.rst  releases.rst  (+3 more)
requirements/: docs.txt  tests.txt
stdlib_tests/: test_argparse.py  test_base64.py  test_bisect.py  test_calendar.py  test_chunk.py  test_colorsys.py  test_decimal.py  test_ipaddress.py  test_itertools.py  test_json.py  test_keyword.py  test_operator.py  test_textwrap.py  test_types.py  test_urllib.py  test_warnings.py
tests/: bench_datatypes.py  benchmarks.py  compile_ouroboros.py  example.py  microbenchmarks.py  pystone.py  sample.py  test_benchmarks.py  test_class.py  test_codecs.py  test_for.py  test_function.py  test_if_elif_else.py  test_large_code.py  test_lists.py  test_operators.py  test_pystone.py  test_sequences.py  test_try_catch.py  test_tuples.py  test_utils.py  test_while.py  utils.py
tools/: build_report.py  build_stdlib_report.py  compile_stdlib.py  upload.py
type1/: mul.py
voc/: __init__.py  __main__.py  transpiler.py
(+442 files in other folders)
