[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=local/*,docs/*,settings.py,*/migrations/*
max-complexity = 10
max-line-length = 119
[metadata]
description-file = README.md
[pycodestyle]
# https://pycodestyle.readthedocs.org/en/latest/
# W503 raised if operators are after line break
ignore = W503
